On exception RESTHelper would get into NPE rather than providing helpfull details as the catch code seems intentioned to do